--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
                 #Kafka #STOMP #Docker #SpringBoot
             </div>
             <div id="author">
-                Utilized by Myeongsu Koo (hdimmfh). Thank you for watching.
+                Utilized by Jessie Sun. Thank you for watching.
             </div>
         </div>
     </div>
